# solana-program-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh  rust-toolchain.toml
demos/: cfx-stake-core
examples/func/: lock.rs
src/: lib.rs  main.rs
src/analysis/: callgraph.rs  dominator.rs  graph.rs  mod.rs  postdominator.rs
src/analysis/account/: mod.rs
src/analysis/graph/: directed_graph.rs  mod.rs
src/analysis/internal/: coercion.rs  mod.rs  reachability.rs
src/anchor_info/: mod.rs
src/checker/: mod.rs
src/metadata/: mod.rs  parser.rs  vulnerability.rs
